--- a/Recorder_APP/app/src/main/res/values/strings.xml
+++ b/Recorder_APP/app/src/main/res/values/strings.xml
@@ -7,12 +7,16 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Phone Number</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_username">Username</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register now</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_confirm">The password is different</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
@@ -90,4 +94,5 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="title_activity_register">register</string>
 </resources>
