--- a/Recorder_APP/app/src/main/res/values/strings.xml
+++ b/Recorder_APP/app/src/main/res/values/strings.xml
@@ -95,4 +95,14 @@
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_register">register</string>
+
+    <string-array name="select_user_habit_type" >
+        <item>Date</item>
+        <item>Degree</item>
+        <item>Do or Not</item>
+        <item>Duration</item>
+    </string-array>
+
+
+
 </resources>
